Add support for API Server Deployment (#355)
* Add support for API Server Deployment

* add missing client function

* lint corrections

* add HAL links to the core model
