# authorize/model_api_server_deployment_access_control.go
@@ -1,0 +1,126 @@
+/*
+PingOne Platform API - Authorize
+
+The PingOne Platform API covering the PingOne Authorize service
+
+API version: 2023-06-29
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package authorize
+
+import (
+	"encoding/json"
+)
+
+// checks if the APIServerDeploymentAccessControl type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &APIServerDeploymentAccessControl{}
+
+// APIServerDeploymentAccessControl struct for APIServerDeploymentAccessControl
+type APIServerDeploymentAccessControl struct {
+	Custom *APIServerDeploymentAccessControlCustom `json:"custom,omitempty"`
+}
+
+// NewAPIServerDeploymentAccessControl instantiates a new APIServerDeploymentAccessControl object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewAPIServerDeploymentAccessControl() *APIServerDeploymentAccessControl {
+	this := APIServerDeploymentAccessControl{}
+	return &this
+}
+
+// NewAPIServerDeploymentAccessControlWithDefaults instantiates a new APIServerDeploymentAccessControl object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewAPIServerDeploymentAccessControlWithDefaults() *APIServerDeploymentAccessControl {
+	this := APIServerDeploymentAccessControl{}
+	return &this
+}
+
+// GetCustom returns the Custom field value if set, zero value otherwise.
+func (o *APIServerDeploymentAccessControl) GetCustom() APIServerDeploymentAccessControlCustom {
+	if o == nil || IsNil(o.Custom) {
+		var ret APIServerDeploymentAccessControlCustom
+		return ret
+	}
+	return *o.Custom
+}
+
+// GetCustomOk returns a tuple with the Custom field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *APIServerDeploymentAccessControl) GetCustomOk() (*APIServerDeploymentAccessControlCustom, bool) {
+	if o == nil || IsNil(o.Custom) {
+		return nil, false
+	}
+	return o.Custom, true
+}
+
+// HasCustom returns a boolean if a field has been set.
+func (o *APIServerDeploymentAccessControl) HasCustom() bool {
+	if o != nil && !IsNil(o.Custom) {
+		return true
+	}
+
+	return false
+}
+
+// SetCustom gets a reference to the given APIServerDeploymentAccessControlCustom and assigns it to the Custom field.
+func (o *APIServerDeploymentAccessControl) SetCustom(v APIServerDeploymentAccessControlCustom) {
+	o.Custom = &v
+}
+
+func (o APIServerDeploymentAccessControl) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o APIServerDeploymentAccessControl) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Custom) {
+		toSerialize["custom"] = o.Custom
+	}
+	return toSerialize, nil
+}
+
+type NullableAPIServerDeploymentAccessControl struct {
+	value *APIServerDeploymentAccessControl
+	isSet bool
+}
+
+func (v NullableAPIServerDeploymentAccessControl) Get() *APIServerDeploymentAccessControl {
+	return v.value
+}
+
+func (v *NullableAPIServerDeploymentAccessControl) Set(val *APIServerDeploymentAccessControl) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableAPIServerDeploymentAccessControl) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableAPIServerDeploymentAccessControl) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableAPIServerDeploymentAccessControl(val *APIServerDeploymentAccessControl) *NullableAPIServerDeploymentAccessControl {
+	return &NullableAPIServerDeploymentAccessControl{value: val, isSet: true}
+}
+
+func (v NullableAPIServerDeploymentAccessControl) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableAPIServerDeploymentAccessControl) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
